--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "chokoshtroko";
+  src: url("/fonts/chokoshtroko-webfont.woff2") format("woff2"), url("/fonts/chokoshtroko-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -634,7 +640,7 @@ body {
 
 .accordion {
   font-weight: bolder;
-  color: #fff;
+  color: #000000;
   padding: 20px;
   margin: 10px 0;
   cursor: pointer;
@@ -644,8 +650,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 2px solid #ED6A40;
-  text-shadow: 3px -2px 0px rgba(0, 0, 0, 0.9);
+  border: 4px solid black;
+  text-shadow: 3px -2px 0px rgba(237, 106, 64, 0.5764705882);
   font-size: 4.4rem;
   background: repeat;
   background-position: 75% 42%;
@@ -653,12 +659,10 @@ body {
   background-color: #7DDBD2;
 }
 
-.accordion:hover {
-  opacity: 0.8;
-}
-
+/*.accordion:hover { opacity: 0.8; }
+*/
 .accordion:nth-child(4n-1) {
-  border: 2px solid #AA78A6;
+  text-shadow: 3px -2px 0px rgba(170, 120, 166, 0.5647058824);
 }
 
 .panel:nth-child(4n) .menu-item {
@@ -712,6 +716,10 @@ body {
 .footer {
   font-family: "chokoshtroko", sans-serif;
   font-size: 22px;
+}
+
+.credits {
+  margin-top: 8px;
 }
 
 /*# sourceMappingURL=styles.css.map */
