--- a/styles.scss
+++ b/styles.scss
@@ -557,7 +557,7 @@ body { font-family: 'spacecraft', sans-serif;
 
 .accordion {
 			font-weight: bolder;
-            color: #fff;
+            color: #000000;
             padding: 20px;
             margin: 10px 0;
             cursor: pointer;
@@ -567,19 +567,19 @@ body { font-family: 'spacecraft', sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 2px solid $color-primary;
-            text-shadow: 3px -2px 0px rgba(0, 0, 0, 0.9);
+            border: 4px solid black;
+            text-shadow: 3px -2px 0px #ED6A4093;
             font-size: 4.4rem;
 			background: repeat;
     		background-position: 75% 42%;
     		background-size: 4.5rem;
 			background-color: $color-secondary;
  }
-//.accordion:hover { opacity: 0.8; }
-
+/*.accordion:hover { opacity: 0.8; }
+*/
 .accordion:nth-child(4n-1) {
-	border: 2px solid $color-third;
-}
+	text-shadow: 3px -2px 0px #AA78A690;
+} 
 .panel:nth-child(4n) .menu-item {
 	background: $color-third;
 }
@@ -628,4 +628,8 @@ body { font-family: 'spacecraft', sans-serif;
 		.footer {
 			font-family: 'chokoshtroko', sans-serif;
 			font-size: 22px;
+		}
+
+		.credits {
+			margin-top: 8px
 		}
