--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,14 @@
   src: url("/fonts/spacecraft-webfont.woff2") format("woff2"), url("/fonts/spacecraft-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "chokoshtroko";
   src: url("/fonts/chokoshtroko-webfont.woff2") format("woff2"), url("/fonts/chokoshtroko-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -607,7 +609,7 @@ header {
   justify-content: space-between;
   padding: 1rem;
   text-align: left;
-  min-height: 2.6rem;
+  min-height: 2.8rem;
   border-radius: 2px;
   color: white;
 }
@@ -621,6 +623,7 @@ header {
   font-size: 1.2em;
   color: #ff5733;
   font-weight: bold;
+  width: 20%;
 }
 
 body {
@@ -681,22 +684,26 @@ body {
 .menu-item .details {
   font-size: 0.9em;
   color: #000000;
+  padding-top: 4px;
 }
 
 /* Floating Button */
-.top-button {
+.top-button2 {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: #ff0066;
-  color: white;
   border: none;
   padding: 15px;
   border-radius: 50%;
   font-size: 18px;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  transition: background 0.3s;
+  width: 64px;
+  height: 64px;
+  background-color: rgba(255, 255, 255, 0.86);
+  background-image: url("./images/up-chevron.png");
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .top-button:hover {
@@ -706,6 +713,7 @@ body {
 .menu-item-name {
   align-self: center;
   font-family: "montserrat", sans-serif;
+  width: 75%;
 }
 
 .menu-item-price {
