--- a/styles.scss
+++ b/styles.scss
@@ -4,6 +4,7 @@
          url('/fonts/spacecraft-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
          url('/fonts/chokoshtroko-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+	font-display: swap;
 }
 
 
@@ -531,9 +533,10 @@ header {
 	justify-content: space-between;
 	padding: 1rem;
 	text-align: left;
-	min-height: 2.6rem;
+	min-height: 2.8rem;
 	border-radius: 2px;
 	color: white;
+	
 }
 
 .menu-item img {
@@ -545,6 +548,7 @@ header {
     font-size: 1.2em;
     color: #ff5733;
     font-weight: bold;
+	width: 20%;
 }
 
 body { font-family: 'spacecraft', sans-serif;
@@ -596,28 +600,34 @@ body { font-family: 'spacecraft', sans-serif;
 .menu-item .details {
             font-size: 0.9em;
             color: #000000;
+			padding-top: 4px
         }
 		
         /* Floating Button */
-        .top-button {
+		.top-button2 {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: #ff0066;
-            color: white;
             border: none;
             padding: 15px;
             border-radius: 50%;
             font-size: 18px;
             cursor: pointer;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            transition: background 0.3s;
+			width: 64px;
+			height: 64px;
+			background-color: rgb(255 255 255 / 86%);
+			background-image : url('./images/up-chevron.png');
+            transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+			opacity: 0;
+			visibility: hidden;
         }
+
         .top-button:hover { background: #cc0052; }
 
 		.menu-item-name {
 			align-self: center;
 			font-family: 'montserrat', sans-serif;
+			width: 75%;
 		}
 
 		.menu-item-price {
