--- a/styles.scss
+++ b/styles.scss
@@ -574,9 +574,9 @@ body { font-family: 'spacecraft', sans-serif;
             border: 4px solid black;
             text-shadow: 3px -2px 0px #ED6A4093;
             font-size: 4.4rem;
-			background: repeat;
-    		background-position: 75% 42%;
-    		background-size: 4.5rem;
+			background: no-repeat;
+   			 background-position: 75% 42%;
+   			 background-size: 10rem;
 			background-color: $color-secondary;
  }
 /*.accordion:hover { opacity: 0.8; }
