--- a/styles.css
+++ b/styles.css
@@ -651,23 +651,24 @@ body {
   cursor: pointer;
   border-radius: 6px;
   transition: background 0.3s;
-  height: 120px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 4px solid black;
   text-shadow: 3px -2px 0px rgba(237, 106, 64, 0.5764705882);
-  font-size: 4.4rem;
+  box-shadow: 3px -2px 0px rgba(237, 106, 64, 0.5764705882);
+  font-size: 3.4rem;
   background: no-repeat;
   background-position: 75% 42%;
-  background-size: 10rem;
-  background-color: #7DDBD2;
+  background-size: 8rem;
 }
 
 /*.accordion:hover { opacity: 0.8; }
 */
 .accordion:nth-child(4n-1) {
   text-shadow: 3px -2px 0px rgba(170, 120, 166, 0.5647058824);
+  box-shadow: 3px -2px 0px rgba(170, 120, 166, 0.5647058824);
 }
 
 .panel:nth-child(4n) .menu-item {
@@ -687,6 +688,7 @@ body {
   font-size: 0.9em;
   color: #000000;
   padding-top: 4px;
+  font-weight: normal;
 }
 
 /* Floating Button */
@@ -701,8 +703,9 @@ body {
   cursor: pointer;
   width: 64px;
   height: 64px;
-  background-color: rgba(255, 255, 255, 0.86);
-  background-image: url("./images/up-chevron.png");
+  background-color: transparent;
+  background-image: url("./images/next.png");
+  background-size: contain;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   opacity: 0;
   visibility: hidden;
@@ -716,11 +719,13 @@ body {
   align-self: center;
   font-family: "montserrat", sans-serif;
   width: 75%;
+  font-weight: 500;
 }
 
 .menu-item-price {
   font-family: "montserrat", sans-serif;
   align-self: center;
+  font-weight: 500;
 }
 
 .footer {
