--- a/styles.scss
+++ b/styles.scss
@@ -76,6 +76,7 @@ $color-primary: #ED6A40;
 $color-secondary: #7DDBD2;
 $color-accent: #361134;
 $color-third: #AA78A6;
+$papaya: #FFEECF;
 
 $color-bg1: #D7DEDC;
 $color-bg2: #CFCFCD;
@@ -569,22 +570,24 @@ body { font-family: 'spacecraft', sans-serif;
             cursor: pointer;
             border-radius: 6px;
             transition: background 0.3s;
-            height: 120px;
+            height: 100px;
             display: flex;
             align-items: center;
             justify-content: center;
             border: 4px solid black;
             text-shadow: 3px -2px 0px #ED6A4093;
-            font-size: 4.4rem;
+			box-shadow: 3px -2px 0px #ED6A4093;
+            font-size: 3.4rem;
 			background: no-repeat;
    			 background-position: 75% 42%;
-   			 background-size: 10rem;
-			background-color: $color-secondary;
+   			 background-size: 8rem;
+		//	background-color: $papaya;
  }
 /*.accordion:hover { opacity: 0.8; }
 */
 .accordion:nth-child(4n-1) {
 	text-shadow: 3px -2px 0px #AA78A690;
+	box-shadow: 3px -2px 0px #AA78A690;
 } 
 .panel:nth-child(4n) .menu-item {
 	background: $color-third;
@@ -602,7 +605,8 @@ body { font-family: 'spacecraft', sans-serif;
 .menu-item .details {
             font-size: 0.9em;
             color: #000000;
-			padding-top: 4px
+			padding-top: 4px;
+			font-weight: normal;
         }
 		
         /* Floating Button */
@@ -617,8 +621,9 @@ body { font-family: 'spacecraft', sans-serif;
             cursor: pointer;
 			width: 64px;
 			height: 64px;
-			background-color: rgb(255 255 255 / 86%);
-			background-image : url('./images/up-chevron.png');
+			background-color: transparent;
+			background-image : url('./images/next.png');
+			background-size: contain;
             transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 			opacity: 0;
 			visibility: hidden;
@@ -630,11 +635,13 @@ body { font-family: 'spacecraft', sans-serif;
 			align-self: center;
 			font-family: 'montserrat', sans-serif;
 			width: 75%;
+			font-weight: 500;
 		}
 
 		.menu-item-price {
 			font-family: 'montserrat', sans-serif;
 			align-self: center;
+			font-weight: 500;
 		}
 
 		.footer {
