--- a/styles.scss
+++ b/styles.scss
@@ -652,3 +652,7 @@ body { font-family: 'spacecraft', sans-serif;
 		.credits {
 			margin-top: 8px
 		}
+
+		.easter {
+			transition: opacity 0.5s ease-in-out;
+		}
