--- a/styles.scss
+++ b/styles.scss
@@ -604,7 +604,7 @@ body { font-family: 'spacecraft', sans-serif;
 
 .menu-item .details {
             font-size: 0.9em;
-            color: #000000;
+            color: #ffffff;
 			padding-top: 4px;
 			font-weight: normal;
         }
